// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Inference: type-level rows > Record type polymorphism \\r:Row -> { foo: Num | r} 1`] = `
{
  "displays": {
    "constraints": [
      "Type ~~ Type",
      "Num ~~ ?2",
      "Type ~~ ?3",
    ],
    "term": "λr -> Schema [ foo: Num | r ]",
    "type": "Π(r: Row) -> (closure: Type -| Γ: r)",
  },
}
`;

exports[`Inference: type-level rows > Record type polymorphism \\r:Row -> { foo: Num | r} 2`] = `
{
  "structure": {
    "constraints": [
      {
        "left": {
          "id": 16,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "lvl": 0,
        "right": {
          "id": 1,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "type": "assign",
      },
      {
        "left": {
          "id": 26,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Num",
          },
        },
        "lvl": 1,
        "right": {
          "id": 23,
          "type": "Neutral",
          "value": {
            "id": 22,
            "type": "Var",
            "variable": {
              "lvl": 1,
              "type": "Meta",
              "val": 2,
            },
          },
        },
        "type": "assign",
      },
      {
        "left": {
          "id": 1,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "lvl": 1,
        "right": {
          "id": 25,
          "type": "Neutral",
          "value": {
            "id": 24,
            "type": "Var",
            "variable": {
              "lvl": 1,
              "type": "Meta",
              "val": 3,
            },
          },
        },
        "type": "assign",
      },
    ],
    "metas": {
      "1": {
        "ann": {
          "id": 1,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 1,
          "type": "Meta",
          "val": 1,
        },
      },
      "2": {
        "ann": {
          "id": 21,
          "type": "Neutral",
          "value": {
            "id": 20,
            "type": "Var",
            "variable": {
              "lvl": 1,
              "type": "Meta",
              "val": 1,
            },
          },
        },
        "meta": {
          "lvl": 1,
          "type": "Meta",
          "val": 2,
        },
      },
      "3": {
        "ann": {
          "id": 1,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 1,
          "type": "Meta",
          "val": 3,
        },
      },
    },
    "term": {
      "binding": {
        "annotation": {
          "id": 813,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Row",
          },
        },
        "icit": "Explicit",
        "type": "Lambda",
        "variable": "r",
      },
      "body": {
        "arg": {
          "id": 817,
          "row": {
            "label": "foo",
            "row": {
              "type": "variable",
              "variable": {
                "index": 0,
                "type": "Bound",
              },
            },
            "type": "extension",
            "value": {
              "id": 815,
              "type": "Var",
              "variable": {
                "name": "Num",
                "type": "Free",
              },
            },
          },
          "type": "Row",
        },
        "func": {
          "id": 816,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Schema",
          },
        },
        "icit": "Explicit",
        "id": 818,
        "type": "App",
      },
      "id": 819,
      "type": "Abs",
    },
    "type": {
      "binder": {
        "annotation": {
          "id": 17,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Row",
          },
        },
        "icit": "Explicit",
        "type": "Pi",
        "variable": "r",
      },
      "closure": {
        "ctx": {
          "env": [],
          "implicits": [],
          "metas": {},
          "sigma": {},
          "zonker": {},
        },
        "term": {
          "id": 820,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "type": "Closure",
      },
      "id": 27,
      "type": "Abs",
    },
    "typedTerms": {},
  },
}
`;

exports[`Inference: type-level rows > Record value extension \\r -> { foo: Num | r} 1`] = `
{
  "displays": {
    "constraints": [
      "Num ~~ ?3",
      "Type ~~ ?4",
      "?1 ~~ Schema [ | ?5 ]",
    ],
    "term": "λr -> Struct [ foo: Num | r ]",
    "type": "Π(r: ?1) -> (closure: Schema [ foo: Type | ?5 ] -| Γ: r)",
  },
}
`;

exports[`Inference: type-level rows > Record value extension \\r -> { foo: Num | r} 2`] = `
{
  "structure": {
    "constraints": [
      {
        "left": {
          "id": 26,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Num",
          },
        },
        "lvl": 1,
        "right": {
          "id": 23,
          "type": "Neutral",
          "value": {
            "id": 22,
            "type": "Var",
            "variable": {
              "lvl": 1,
              "type": "Meta",
              "val": 3,
            },
          },
        },
        "type": "assign",
      },
      {
        "left": {
          "id": 1,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "lvl": 1,
        "right": {
          "id": 25,
          "type": "Neutral",
          "value": {
            "id": 24,
            "type": "Var",
            "variable": {
              "lvl": 1,
              "type": "Meta",
              "val": 4,
            },
          },
        },
        "type": "assign",
      },
      {
        "left": {
          "id": 16,
          "type": "Var",
          "variable": {
            "lvl": 0,
            "type": "Meta",
            "val": 1,
          },
        },
        "lvl": 1,
        "right": {
          "id": 30,
          "type": "Neutral",
          "value": {
            "arg": {
              "id": 28,
              "row": {
                "type": "variable",
                "variable": {
                  "lvl": 1,
                  "type": "Meta",
                  "val": 5,
                },
              },
              "type": "Row",
            },
            "func": {
              "id": 27,
              "type": "Lit",
              "value": {
                "type": "Atom",
                "value": "Schema",
              },
            },
            "icit": "Explicit",
            "id": 29,
            "type": "App",
          },
        },
        "type": "assign",
      },
    ],
    "metas": {
      "1": {
        "ann": {
          "id": 1,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 1,
        },
      },
      "2": {
        "ann": {
          "id": 1,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 1,
          "type": "Meta",
          "val": 2,
        },
      },
      "3": {
        "ann": {
          "id": 21,
          "type": "Neutral",
          "value": {
            "id": 20,
            "type": "Var",
            "variable": {
              "lvl": 1,
              "type": "Meta",
              "val": 2,
            },
          },
        },
        "meta": {
          "lvl": 1,
          "type": "Meta",
          "val": 3,
        },
      },
      "4": {
        "ann": {
          "id": 1,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 1,
          "type": "Meta",
          "val": 4,
        },
      },
      "5": {
        "ann": {
          "id": 2,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Row",
          },
        },
        "meta": {
          "lvl": 1,
          "type": "Meta",
          "val": 5,
        },
      },
    },
    "term": {
      "binding": {
        "annotation": {
          "id": 813,
          "type": "Var",
          "variable": {
            "lvl": 0,
            "type": "Meta",
            "val": 1,
          },
        },
        "icit": "Explicit",
        "type": "Lambda",
        "variable": "r",
      },
      "body": {
        "arg": {
          "id": 817,
          "row": {
            "label": "foo",
            "row": {
              "type": "variable",
              "variable": {
                "index": 0,
                "type": "Bound",
              },
            },
            "type": "extension",
            "value": {
              "id": 815,
              "type": "Var",
              "variable": {
                "name": "Num",
                "type": "Free",
              },
            },
          },
          "type": "Row",
        },
        "func": {
          "id": 816,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Struct",
          },
        },
        "icit": "Explicit",
        "id": 818,
        "type": "App",
      },
      "id": 819,
      "type": "Abs",
    },
    "type": {
      "binder": {
        "annotation": {
          "id": 17,
          "type": "Neutral",
          "value": {
            "id": 16,
            "type": "Var",
            "variable": {
              "lvl": 0,
              "type": "Meta",
              "val": 1,
            },
          },
        },
        "icit": "Explicit",
        "type": "Pi",
        "variable": "r",
      },
      "closure": {
        "ctx": {
          "env": [],
          "implicits": [],
          "metas": {},
          "sigma": {},
          "zonker": {},
        },
        "term": {
          "arg": {
            "id": 822,
            "row": {
              "label": "foo",
              "row": {
                "type": "variable",
                "variable": {
                  "lvl": 1,
                  "type": "Meta",
                  "val": 5,
                },
              },
              "type": "extension",
              "value": {
                "id": 821,
                "type": "Lit",
                "value": {
                  "type": "Atom",
                  "value": "Type",
                },
              },
            },
            "type": "Row",
          },
          "func": {
            "id": 820,
            "type": "Lit",
            "value": {
              "type": "Atom",
              "value": "Schema",
            },
          },
          "icit": "Explicit",
          "id": 823,
          "type": "App",
        },
        "type": "Closure",
      },
      "id": 35,
      "type": "Abs",
    },
    "typedTerms": {},
  },
}
`;

exports[`Inference: type-level rows > Row extension: [x: Num, y: String] 1`] = `
{
  "displays": {
    "constraints": [
      "String ~~ ?5",
      "Type ~~ ?6",
      "Num ~~ ?2",
      "Type ~~ ?3",
    ],
    "term": "[ y: String, x: Num ]",
    "type": "Row",
  },
}
`;

exports[`Inference: type-level rows > Row extension: [x: Num, y: String] 2`] = `
{
  "structure": {
    "constraints": [
      {
        "left": {
          "id": 28,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "String",
          },
        },
        "lvl": 0,
        "right": {
          "id": 25,
          "type": "Neutral",
          "value": {
            "id": 24,
            "type": "Var",
            "variable": {
              "lvl": 1,
              "type": "Meta",
              "val": 5,
            },
          },
        },
        "type": "assign",
      },
      {
        "left": {
          "id": 1,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "lvl": 0,
        "right": {
          "id": 27,
          "type": "Neutral",
          "value": {
            "id": 26,
            "type": "Var",
            "variable": {
              "lvl": 1,
              "type": "Meta",
              "val": 6,
            },
          },
        },
        "type": "assign",
      },
      {
        "left": {
          "id": 29,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Num",
          },
        },
        "lvl": 0,
        "right": {
          "id": 19,
          "type": "Neutral",
          "value": {
            "id": 18,
            "type": "Var",
            "variable": {
              "lvl": 0,
              "type": "Meta",
              "val": 2,
            },
          },
        },
        "type": "assign",
      },
      {
        "left": {
          "id": 1,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "lvl": 0,
        "right": {
          "id": 21,
          "type": "Neutral",
          "value": {
            "id": 20,
            "type": "Var",
            "variable": {
              "lvl": 0,
              "type": "Meta",
              "val": 3,
            },
          },
        },
        "type": "assign",
      },
    ],
    "metas": {
      "1": {
        "ann": {
          "id": 1,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 1,
        },
      },
      "2": {
        "ann": {
          "id": 17,
          "type": "Neutral",
          "value": {
            "id": 16,
            "type": "Var",
            "variable": {
              "lvl": 0,
              "type": "Meta",
              "val": 1,
            },
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 2,
        },
      },
      "3": {
        "ann": {
          "id": 1,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 3,
        },
      },
      "4": {
        "ann": {
          "id": 1,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 1,
          "type": "Meta",
          "val": 4,
        },
      },
      "5": {
        "ann": {
          "id": 23,
          "type": "Neutral",
          "value": {
            "id": 22,
            "type": "Var",
            "variable": {
              "lvl": 1,
              "type": "Meta",
              "val": 4,
            },
          },
        },
        "meta": {
          "lvl": 1,
          "type": "Meta",
          "val": 5,
        },
      },
      "6": {
        "ann": {
          "id": 1,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 1,
          "type": "Meta",
          "val": 6,
        },
      },
    },
    "term": {
      "id": 815,
      "row": {
        "label": "y",
        "row": {
          "label": "x",
          "row": {
            "type": "empty",
          },
          "type": "extension",
          "value": {
            "id": 814,
            "type": "Var",
            "variable": {
              "name": "Num",
              "type": "Free",
            },
          },
        },
        "type": "extension",
        "value": {
          "id": 813,
          "type": "Var",
          "variable": {
            "name": "String",
            "type": "Free",
          },
        },
      },
      "type": "Row",
    },
    "type": {
      "id": 2,
      "type": "Lit",
      "value": {
        "type": "Atom",
        "value": "Row",
      },
    },
    "typedTerms": {},
  },
}
`;
